# physipy

./: .gitignore  README.md  requirements.txt
physipy/: pyproject.toml
physipy/notebooks/: GP variational.ipynb  bosons_gas.ipynb  deuteron.ipynb  perceptron.ipynb  phase_shifts_scattering copy.ipynb  phase_shifts_scattering.ipynb  quantum_3D_harmonic_oscillator.ipynb
physipy/src/physipy/: __init__.py  bound_states.py  constants.py  mean_field.py  numerics.py  numerics_data.py  potentials.py  scattering.py  utils.py  wkb.py
physipy/src/physipy/cython/: numerics.c  numerics.pyx  setup.py
projects/Quantum Harmonic Oscillator/: README.md
projects/Quantum Harmonic Oscillator/notebooks/: quantum_harmonic_oscillator.ipynb
