[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "physipy"
version = "0.1.0"
description = "Computational physics numerical library"
authors = [{name = "Claudio D'Emilio"}, {name = "Ettore Zangiacomi"}]
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]